// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> AllRecommendedVariants story renders snapshot 1`] = `
<ul
  class="grid gap-y-8"
>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Primary
    </h2>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <a
          class="button sizeLarge variantFlat colorBrand"
        >
          ​
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeLarge variantFlat colorBrand"
        >
          ​
          <svg
            aria-hidden="true"
            class="arrowBackIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
            />
          </svg>
           
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeLarge variantFlat colorBrand"
        >
          ​
          Link
          <svg
            aria-hidden="true"
            class="arrowForwardIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="button sizeMedium variantFlat colorBrand"
        >
          ​
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeSmall variantFlat colorBrand"
        >
          ​
          Link
        </a>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Secondary
    </h2>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <a
          class="button sizeLarge variantOutline colorBrand"
        >
          ​
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeLarge variantOutline colorBrand"
        >
          ​
          <svg
            aria-hidden="true"
            class="arrowBackIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
            />
          </svg>
           
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeLarge variantOutline colorBrand"
        >
          ​
          Link
          <svg
            aria-hidden="true"
            class="arrowForwardIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="button sizeMedium variantOutline colorBrand"
        >
          ​
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeSmall variantOutline colorBrand"
        >
          ​
          Link
        </a>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Tertiary
    </h2>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <a
          class="button sizeLarge variantOutline colorNeutral"
        >
          ​
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeLarge variantOutline colorNeutral"
        >
          ​
          <svg
            aria-hidden="true"
            class="arrowBackIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
            />
          </svg>
           
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeLarge variantOutline colorNeutral"
        >
          ​
          Link
          <svg
            aria-hidden="true"
            class="arrowForwardIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="button sizeMedium variantOutline colorNeutral"
        >
          ​
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeSmall variantOutline colorNeutral"
        >
          ​
          Link
        </a>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Plain
    </h2>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <a
          class="button sizeLarge variantPlain colorBrand"
        >
          ​
          <svg
            aria-hidden="true"
            class="arrowBackIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
            />
          </svg>
           
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeLarge variantPlain colorBrand"
        >
          ​
          Link
          <svg
            aria-hidden="true"
            class="arrowForwardIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="button sizeLarge variantPlain colorBrand"
        >
          ​
          <svg
            class="onlyArrowIcon svgIcon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              forward
            </title>
            <path
              d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="button sizeMedium variantPlain colorBrand"
        >
          ​
          <svg
            aria-hidden="true"
            class="arrowBackIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
            />
          </svg>
           
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeMedium variantPlain colorBrand"
        >
          ​
          Link
          <svg
            aria-hidden="true"
            class="arrowForwardIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="button sizeMedium variantPlain colorBrand"
        >
          ​
          <svg
            class="onlyAddIcon svgIcon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              add
            </title>
            <path
              d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
            />
          </svg>
        </a>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Link
    </h2>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <a
          class="button variantLink colorBrand"
        >
          ​
          Link
        </a>
      </li>
      <li>
        <a
          class="button variantLink colorBrand"
        >
          ​
          Link
          <svg
            class="ml-1 svgIcon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              opens in a new tab
            </title>
            <path
              d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1zM14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1z"
            />
          </svg>
        </a>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Destructive
    </h2>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <a
          class="button sizeLarge variantFlat colorAlert"
        >
          ​
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeLarge variantFlat colorAlert"
        >
          ​
          <svg
            aria-hidden="true"
            class="arrowBackIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
            />
          </svg>
           
          Link
        </a>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`<Link /> Default story renders snapshot 1`] = `
<a
  class="button variantLink colorBrand"
  href=""
>
  ​
  Link
</a>
`;

exports[`<Link /> DestructiveRecommendedVariants story renders snapshot 1`] = `
<ul
  class="grid gap-y-4"
>
  <li>
    <a
      class="button sizeLarge variantFlat colorAlert"
    >
      ​
      Link
    </a>
  </li>
  <li>
    <a
      class="button sizeLarge variantFlat colorAlert"
    >
      ​
      <svg
        aria-hidden="true"
        class="arrowBackIcon svgIcon"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
        />
      </svg>
       
      Link
    </a>
  </li>
</ul>
`;

exports[`<Link /> LinkRecommendedVariants story renders snapshot 1`] = `
<ul
  class="grid gap-y-4"
>
  <li>
    <a
      class="button variantLink colorBrand"
    >
      ​
      Link
    </a>
  </li>
  <li>
    <a
      class="button variantLink colorBrand"
    >
      ​
      Link
      <svg
        class="ml-1 svgIcon"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          opens in a new tab
        </title>
        <path
          d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1zM14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1z"
        />
      </svg>
    </a>
  </li>
</ul>
`;

exports[`<Link /> PlainRecommendedVariants story renders snapshot 1`] = `
<ul
  class="grid gap-y-4"
>
  <li>
    <a
      class="button sizeLarge variantPlain colorBrand"
    >
      ​
      <svg
        aria-hidden="true"
        class="arrowBackIcon svgIcon"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
        />
      </svg>
       
      Link
    </a>
  </li>
  <li>
    <a
      class="button sizeLarge variantPlain colorBrand"
    >
      ​
      Link
      <svg
        aria-hidden="true"
        class="arrowForwardIcon svgIcon"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
        />
      </svg>
    </a>
  </li>
  <li>
    <a
      class="button sizeLarge variantPlain colorBrand"
    >
      ​
      <svg
        class="onlyArrowIcon svgIcon"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          forward
        </title>
        <path
          d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
        />
      </svg>
    </a>
  </li>
  <li>
    <a
      class="button sizeMedium variantPlain colorBrand"
    >
      ​
      <svg
        aria-hidden="true"
        class="arrowBackIcon svgIcon"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
        />
      </svg>
       
      Link
    </a>
  </li>
  <li>
    <a
      class="button sizeMedium variantPlain colorBrand"
    >
      ​
      Link
      <svg
        aria-hidden="true"
        class="arrowForwardIcon svgIcon"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
        />
      </svg>
    </a>
  </li>
  <li>
    <a
      class="button sizeMedium variantPlain colorBrand"
    >
      ​
      <svg
        class="onlyAddIcon svgIcon"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          add
        </title>
        <path
          d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
        />
      </svg>
    </a>
  </li>
</ul>
`;

exports[`<Link /> PrimaryRecommendedVariants story renders snapshot 1`] = `
<ul
  class="grid gap-y-4"
>
  <li>
    <a
      class="button sizeLarge variantFlat colorBrand"
    >
      ​
      Link
    </a>
  </li>
  <li>
    <a
      class="button sizeLarge variantFlat colorBrand"
    >
      ​
      <svg
        aria-hidden="true"
        class="arrowBackIcon svgIcon"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
        />
      </svg>
       
      Link
    </a>
  </li>
  <li>
    <a
      class="button sizeLarge variantFlat colorBrand"
    >
      ​
      Link
      <svg
        aria-hidden="true"
        class="arrowForwardIcon svgIcon"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
        />
      </svg>
    </a>
  </li>
  <li>
    <a
      class="button sizeMedium variantFlat colorBrand"
    >
      ​
      Link
    </a>
  </li>
  <li>
    <a
      class="button sizeSmall variantFlat colorBrand"
    >
      ​
      Link
    </a>
  </li>
</ul>
`;

exports[`<Link /> SecondaryRecommendedVariants story renders snapshot 1`] = `
<ul
  class="grid gap-y-4"
>
  <li>
    <a
      class="button sizeLarge variantOutline colorBrand"
    >
      ​
      Link
    </a>
  </li>
  <li>
    <a
      class="button sizeLarge variantOutline colorBrand"
    >
      ​
      <svg
        aria-hidden="true"
        class="arrowBackIcon svgIcon"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
        />
      </svg>
       
      Link
    </a>
  </li>
  <li>
    <a
      class="button sizeLarge variantOutline colorBrand"
    >
      ​
      Link
      <svg
        aria-hidden="true"
        class="arrowForwardIcon svgIcon"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
        />
      </svg>
    </a>
  </li>
  <li>
    <a
      class="button sizeMedium variantOutline colorBrand"
    >
      ​
      Link
    </a>
  </li>
  <li>
    <a
      class="button sizeSmall variantOutline colorBrand"
    >
      ​
      Link
    </a>
  </li>
</ul>
`;

exports[`<Link /> TertiaryRecommendedVariants story renders snapshot 1`] = `
<ul
  class="grid gap-y-4"
>
  <li>
    <a
      class="button sizeLarge variantOutline colorNeutral"
    >
      ​
      Link
    </a>
  </li>
  <li>
    <a
      class="button sizeLarge variantOutline colorNeutral"
    >
      ​
      <svg
        aria-hidden="true"
        class="arrowBackIcon svgIcon"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
        />
      </svg>
       
      Link
    </a>
  </li>
  <li>
    <a
      class="button sizeLarge variantOutline colorNeutral"
    >
      ​
      Link
      <svg
        aria-hidden="true"
        class="arrowForwardIcon svgIcon"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
        />
      </svg>
    </a>
  </li>
  <li>
    <a
      class="button sizeMedium variantOutline colorNeutral"
    >
      ​
      Link
    </a>
  </li>
  <li>
    <a
      class="button sizeSmall variantOutline colorNeutral"
    >
      ​
      Link
    </a>
  </li>
</ul>
`;

exports[`<Link /> linkInBody story renders snapshot 1`] = `
<p
  class="typography sizeBody colorBase"
>
  This text surrounds the 
  <a
    class="button variantLink colorBrand"
    href=""
  >
    ​
    Link
  </a>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Link /> linkInHeading story renders snapshot 1`] = `
<p
  class="typography sizeH1 colorBase"
>
  This text surrounds the 
  <a
    class="button variantLink colorBrand"
    href=""
  >
    ​
    Link
  </a>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Link /> passes class names down properly 1`] = `
<a
  class="exampleClassName button variantLink colorBrand"
  data-testid="example-class-name"
>
  ​
  Link with example className
</a>
`;

exports[`<Link /> passes test ids down properly 1`] = `
<a
  class="button variantLink colorBrand"
  data-testid="example-test-id"
>
  ​
  Link with data-testid
</a>
`;
